--- a/modules/yr-y-rhythm/_debug.scss
+++ b/modules/yr-y-rhythm/_debug.scss
@@ -7,6 +7,7 @@
       $shadow: append($shadow, "0 #{$line-step * 2 * $i} 0 0 rgba(197, 93, 122, 0.2)", comma);
     }
     box-shadow: #{$shadow};
+    content: "Rhythm grid:";
     height: $thin;
     left: 0;
     position: absolute;
